fix for empty p tags shortcodes leaves behind

--- a/css/site.css
+++ b/css/site.css
@@ -158,7 +158,10 @@ UTILS
 	left: 0;
 }
 
-
+/*fix for empty p shortcodes tends to leave behind*/
+p:empty{
+	display: none;
+}
 
 
 
